OP-160 handled large queries (1 year) in OPD with warning message

--- a/bundle/language_ar.properties
+++ b/bundle/language_ar.properties
@@ -174,7 +174,6 @@ angal.admission.thereismorethanonependingbillforthispatientcontinuecreateanother
 angal.admission.thereismorethanonependingbillforthispatientopenlastopenenedbill  = There is more than one pending bill for this patient, do you want to open last pending bill?
 angal.admission.theselectedadmissionhasnoconcernwithmalnutrit                    = الدخول المختار ليس متعلق بسوء التغذية
 angal.admission.theselectedadmissionhasnoconcernwithmalnutrition                 = الدخول المختار ليس متعلق بسوء التغذية
-angal.admission.thiscouldretrievealargeamountofdataproceed                       = هذا يمكن استرداد كمية كبيرة من البيانات، والمضي قدما؟
 angal.admission.thispatienthasapendingbill                                       = هذا المريض لا يزال لديه فاتورة
 angal.admission.thispatienthasapendingbillcreateanother                          = This Patient has already a pending bill. Do you want to create another?
 angal.admission.transfusionalunit                                                = وحدة نقل الدم
@@ -288,6 +287,7 @@ angal.common.pleaseselectarow                                                   
 angal.common.quantity                                                            = كمية
 angal.common.save                                                                = حفظ
 angal.common.savem                                                               = حفظ
+angal.common.thiscouldretrievealargeamountofdataproceed                          = هذا يمكن استرداد كمية كبيرة من البيانات، والمضي قدما؟
 angal.common.to                                                                  = إلى
 angal.dicom.delete.no                                                            = لا
 angal.dicom.delete.request                                                       = Are you sure you want to delete the file?
