--- a/bundle/language_de.properties
+++ b/bundle/language_de.properties
@@ -174,7 +174,6 @@ angal.admission.thereismorethanonependingbillforthispatientcontinuecreateanother
 angal.admission.thereismorethanonependingbillforthispatientopenlastopenenedbill  = There is more than one pending bill for this patient, do you want to open last pending bill?
 angal.admission.theselectedadmissionhasnoconcernwithmalnutrit                    = Die gewaehlte Aufnahme steht nicht in Verbindung mit der Unterernaehrung.
 angal.admission.theselectedadmissionhasnoconcernwithmalnutrition                 = The selected admission has no concern with malnutrition
-angal.admission.thiscouldretrievealargeamountofdataproceed                       = Dies könnte abzurufen eine große Menge von Daten, vorgehen?
 angal.admission.thispatienthasapendingbill                                       = This Patient has already a pending bill
 angal.admission.thispatienthasapendingbillcreateanother                          = This Patient has already a pending bill. Do you want to create another?
 angal.admission.transfusionalunit                                                = Transfusionseinheit
@@ -288,6 +287,7 @@ angal.common.pleaseselectarow                                                   
 angal.common.quantity                                                            = Menge
 angal.common.save                                                                = Speichern
 angal.common.savem                                                               = SPEICHERN
+angal.common.thiscouldretrievealargeamountofdataproceed                          = Dies könnte abzurufen eine große Menge von Daten, vorgehen?
 angal.common.to                                                                  = To
 angal.dicom.delete.no                                                            = Nein
 angal.dicom.delete.request                                                       = Are you sure you want to delete the file?
