--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -174,7 +174,6 @@ angal.admission.thereismorethanonependingbillforthispatientcontinuecreateanother
 angal.admission.thereismorethanonependingbillforthispatientopenlastopenenedbill  = There is more than one pending bill for this patient, do you want to open last pending bill?
 angal.admission.theselectedadmissionhasnoconcernwithmalnutrit                    = The selected Admission has no concern with malnutrition
 angal.admission.theselectedadmissionhasnoconcernwithmalnutrition                 = The selected admission has no concern with malnutrition
-angal.admission.thiscouldretrievealargeamountofdataproceed                       = This could retrieve a large amount of data, proceed?
 angal.admission.thispatienthasapendingbill                                       = This Patient has already a pending bill
 angal.admission.thispatienthasapendingbillcreateanother                          = This Patient has already a pending bill. Do you want to create another?
 angal.admission.transfusionalunit                                                = Transfusional Unit
@@ -288,6 +287,7 @@ angal.common.pleaseselectarow                                                   
 angal.common.quantity                                                            = Quantity
 angal.common.save                                                                = Save
 angal.common.savem                                                               = SAVE
+angal.common.thiscouldretrievealargeamountofdataproceed                          = This could retrieve a large amount of data, proceed?
 angal.common.to                                                                  = To
 angal.dicom.delete.no                                                            = No
 angal.dicom.delete.request                                                       = Are you sure you want to delete the file?
