--- a/bundle/language_es.properties
+++ b/bundle/language_es.properties
@@ -174,7 +174,6 @@ angal.admission.thereismorethanonependingbillforthispatientcontinuecreateanother
 angal.admission.thereismorethanonependingbillforthispatientopenlastopenenedbill  = There is more than one pending bill for this patient, do you want to open last pending bill?
 angal.admission.theselectedadmissionhasnoconcernwithmalnutrit                    = Desnutrición no tiene relación con la hospitalización seleccionada
 angal.admission.theselectedadmissionhasnoconcernwithmalnutrition                 = La hospitalización seleccionada no tiene relación con la desnutrición
-angal.admission.thiscouldretrievealargeamountofdataproceed                       = Esto podría recuperar una gran cantidad de datos, proceder?
 angal.admission.thispatienthasapendingbill                                       = Este paciente tiene ya una factura pendiente
 angal.admission.thispatienthasapendingbillcreateanother                          = This Patient has already a pending bill. Do you want to create another?
 angal.admission.transfusionalunit                                                = Unidad trasfusión
@@ -288,6 +287,7 @@ angal.common.pleaseselectarow                                                   
 angal.common.quantity                                                            = Cantidad
 angal.common.save                                                                = Guarda
 angal.common.savem                                                               = GUARDA
+angal.common.thiscouldretrievealargeamountofdataproceed                          = Esto podría recuperar una gran cantidad de datos, proceder?
 angal.common.to                                                                  = A
 angal.dicom.delete.no                                                            = Núm
 angal.dicom.delete.request                                                       = óEstó seguro que desea eliminar este archivo?
