--- a/bundle/language_it.properties
+++ b/bundle/language_it.properties
@@ -174,7 +174,6 @@ angal.admission.thereismorethanonependingbillforthispatientcontinuecreateanother
 angal.admission.thereismorethanonependingbillforthispatientopenlastopenenedbill  = Vi è più di una fattura in sospeso per questo paziente, si desidera aprire l'ultima fattura in sospeso?
 angal.admission.theselectedadmissionhasnoconcernwithmalnutrit                    = Malnutrizione non riguarda il ricovero selezionato
 angal.admission.theselectedadmissionhasnoconcernwithmalnutrition                 = Il ricovero selezionato non ha relazione con la malnutrizione
-angal.admission.thiscouldretrievealargeamountofdataproceed                       = Questo potrebbe recuperare una grande quantità di dati, procedere?
 angal.admission.thispatienthasapendingbill                                       = Questo Paziente ha già un conto aperto
 angal.admission.thispatienthasapendingbillcreateanother                          = This Patient has already a pending bill. Do you want to create another?
 angal.admission.transfusionalunit                                                = Unità trasfusionale
@@ -288,6 +287,7 @@ angal.common.pleaseselectarow                                                   
 angal.common.quantity                                                            = Quantità
 angal.common.save                                                                = Salva
 angal.common.savem                                                               = SALVA
+angal.common.thiscouldretrievealargeamountofdataproceed                          = Questo potrebbe recuperare una grande quantità di dati, procedere?
 angal.common.to                                                                  = A
 angal.dicom.delete.no                                                            = No
 angal.dicom.delete.request                                                       = Sei sicuro di voler eliminare il file?
