--- a/bundle/language_pt.properties
+++ b/bundle/language_pt.properties
@@ -174,7 +174,6 @@ angal.admission.thereismorethanonependingbillforthispatientcontinuecreateanother
 angal.admission.thereismorethanonependingbillforthispatientopenlastopenenedbill  = There is more than one pending bill for this patient, do you want to open last pending bill?
 angal.admission.theselectedadmissionhasnoconcernwithmalnutrit                    = A admissão selecionada não diz respeito a malnutrição
 angal.admission.theselectedadmissionhasnoconcernwithmalnutrition                 = A entrada selecionada não tem preocupação com a desnutrição
-angal.admission.thiscouldretrievealargeamountofdataproceed                       = esta ação poderá significar a recolha de uma grande quantidade de informação, continuar?
 angal.admission.thispatienthasapendingbill                                       = Este paciente já tem uma factura em atraso
 angal.admission.thispatienthasapendingbillcreateanother                          = This Patient has already a pending bill. Do you want to create another?
 angal.admission.transfusionalunit                                                = Unidade de Transfusão
@@ -288,6 +287,7 @@ angal.common.pleaseselectarow                                                   
 angal.common.quantity                                                            = Quantidade
 angal.common.save                                                                = Salvar
 angal.common.savem                                                               = SALVAR
+angal.common.thiscouldretrievealargeamountofdataproceed                          = esta ação poderá significar a recolha de uma grande quantidade de informação, continuar?
 angal.common.to                                                                  = Para
 angal.dicom.delete.no                                                            = Não
 angal.dicom.delete.request                                                       = Tem certeza que deseja excluir o arquivo?
