--- a/bundle/language_sw.properties
+++ b/bundle/language_sw.properties
@@ -174,7 +174,6 @@ angal.admission.thereismorethanonependingbillforthispatientcontinuecreateanother
 angal.admission.thereismorethanonependingbillforthispatientopenlastopenenedbill  = There is more than one pending bill for this patient, do you want to open last pending bill?
 angal.admission.theselectedadmissionhasnoconcernwithmalnutrit                    = Kulazwa kulikochaguliwa sio kwa ajili ya utapiamlo
 angal.admission.theselectedadmissionhasnoconcernwithmalnutrition                 = Aina ya kulazwa uliochagua haina
-angal.admission.thiscouldretrievealargeamountofdataproceed                       = Hii inaweza retrieve kiasi kikubwa cha data, kuendelea?
 angal.admission.thispatienthasapendingbill                                       = Mgonjwa huu tayari ana ankara ianyosubiri
 angal.admission.thispatienthasapendingbillcreateanother                          = This Patient has already a pending bill. Do you want to create another?
 angal.admission.transfusionalunit                                                = Kitengo cha upaji wa damu
@@ -288,6 +287,7 @@ angal.common.pleaseselectarow                                                   
 angal.common.quantity                                                            = Wingi
 angal.common.save                                                                = Hifadhi
 angal.common.savem                                                               = HIFADHI
+angal.common.thiscouldretrievealargeamountofdataproceed                          = Hii inaweza retrieve kiasi kikubwa cha data, kuendelea?
 angal.common.to                                                                  = kwa
 angal.dicom.delete.no                                                            = Hapana
 angal.dicom.delete.request                                                       = Una uhakika unataka kufuta faili?
