PatientExamination refactoring and settings
- Fixed UoM: removed user defined UoM and adopted SI (Kg for the Weight
and meter for the Height)
- Renamed some DB fields names

--- a/bundle/language_ar.properties
+++ b/bundle/language_ar.properties
@@ -289,6 +289,13 @@ angal.common.save                                                               
 angal.common.savem                                                               = حفظ
 angal.common.thiscouldretrievealargeamountofdataproceed                          = هذا يمكن استرداد كمية كبيرة من البيانات، والمضي قدما؟
 angal.common.to                                                                  = إلى
+angal.common.uom.bpm                                                             = bpm
+angal.common.uom.celsius                                                         = °C
+angal.common.uom.centimeter                                                      = cm
+angal.common.uom.kg                                                              = Kg
+angal.common.uom.meter                                                           = m
+angal.common.uom.mmHg                                                            = mmHg
+angal.common.uom.percentage                                                      = %
 angal.dicom.delete.no                                                            = لا
 angal.dicom.delete.request                                                       = Are you sure you want to delete the file?
 angal.dicom.delete.title                                                         = Confirm delete
