--- a/bundle/language_es.properties
+++ b/bundle/language_es.properties
@@ -289,6 +289,13 @@ angal.common.save                                                               
 angal.common.savem                                                               = GUARDA
 angal.common.thiscouldretrievealargeamountofdataproceed                          = Esto podría recuperar una gran cantidad de datos, proceder?
 angal.common.to                                                                  = A
+angal.common.uom.bpm                                                             = bpm
+angal.common.uom.celsius                                                         = °C
+angal.common.uom.centimeter                                                      = cm
+angal.common.uom.kg                                                              = Kg
+angal.common.uom.meter                                                           = m
+angal.common.uom.mmHg                                                            = mmHg
+angal.common.uom.percentage                                                      = %
 angal.dicom.delete.no                                                            = Núm
 angal.dicom.delete.request                                                       = óEstó seguro que desea eliminar este archivo?
 angal.dicom.delete.title                                                         = Confirmar Cancelación
