--- a/bundle/language_pt.properties
+++ b/bundle/language_pt.properties
@@ -289,6 +289,13 @@ angal.common.save                                                               
 angal.common.savem                                                               = SALVAR
 angal.common.thiscouldretrievealargeamountofdataproceed                          = esta ação poderá significar a recolha de uma grande quantidade de informação, continuar?
 angal.common.to                                                                  = Para
+angal.common.uom.bpm                                                             = bpm
+angal.common.uom.celsius                                                         = °C
+angal.common.uom.centimeter                                                      = cm
+angal.common.uom.kg                                                              = Kg
+angal.common.uom.meter                                                           = m
+angal.common.uom.mmHg                                                            = mmHg
+angal.common.uom.percentage                                                      = %
 angal.dicom.delete.no                                                            = Não
 angal.dicom.delete.request                                                       = Tem certeza que deseja excluir o arquivo?
 angal.dicom.delete.title                                                         = Confirme a exclusão
