--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -289,6 +289,13 @@ angal.common.save                                                               
 angal.common.savem                                                               = SAVE
 angal.common.thiscouldretrievealargeamountofdataproceed                          = This could retrieve a large amount of data, proceed?
 angal.common.to                                                                  = To
+angal.common.uom.bpm                                                             = bpm
+angal.common.uom.celsius                                                         = C
+angal.common.uom.centimeter                                                      = cm
+angal.common.uom.kg                                                              = Kg
+angal.common.uom.meter                                                           = m
+angal.common.uom.mmHg                                                            = mmHg
+angal.common.uom.percentage                                                      = %
 angal.dicom.delete.no                                                            = No
 angal.dicom.delete.request                                                       = Are you sure you want to delete the file?
 angal.dicom.delete.title                                                         = Confirm delete
