--- a/bundle/language_it.properties
+++ b/bundle/language_it.properties
@@ -289,6 +289,13 @@ angal.common.save                                                               
 angal.common.savem                                                               = SALVA
 angal.common.thiscouldretrievealargeamountofdataproceed                          = Questo potrebbe recuperare una grande quantità di dati, procedere?
 angal.common.to                                                                  = A
+angal.common.uom.bpm                                                             = bpm
+angal.common.uom.celsius                                                         = °C
+angal.common.uom.centimeter                                                      = cm
+angal.common.uom.kg                                                              = Kg
+angal.common.uom.meter                                                           = m
+angal.common.uom.mmHg                                                            = mmHg
+angal.common.uom.percentage                                                      = %
 angal.dicom.delete.no                                                            = No
 angal.dicom.delete.request                                                       = Sei sicuro di voler eliminare il file?
 angal.dicom.delete.title                                                         = Conferma eliminazione
