--- a/bundle/language_sw.properties
+++ b/bundle/language_sw.properties
@@ -289,6 +289,13 @@ angal.common.save                                                               
 angal.common.savem                                                               = HIFADHI
 angal.common.thiscouldretrievealargeamountofdataproceed                          = Hii inaweza retrieve kiasi kikubwa cha data, kuendelea?
 angal.common.to                                                                  = kwa
+angal.common.uom.bpm                                                             = bpm
+angal.common.uom.celsius                                                         = °C
+angal.common.uom.centimeter                                                      = cm
+angal.common.uom.kg                                                              = Kg
+angal.common.uom.meter                                                           = m
+angal.common.uom.mmHg                                                            = mmHg
+angal.common.uom.percentage                                                      = %
 angal.dicom.delete.no                                                            = Hapana
 angal.dicom.delete.request                                                       = Una uhakika unataka kufuta faili?
 angal.dicom.delete.title                                                         = Thibitisha kufuta
