OP-171 #comment Changed [IT] Sintomi to [IT] Note

--- a/bundle/language_it.properties
+++ b/bundle/language_it.properties
@@ -414,7 +414,7 @@ angal.examination.heartrate                                                     
 angal.examination.heartrateabbr                                                  = FC
 angal.examination.height                                                         = Altezza
 angal.examination.heightabbr                                                     = (A)
-angal.examination.note                                                           = Sintomi
+angal.examination.note                                                           = Note
 angal.examination.saturation                                                     = Saturazione
 angal.examination.saturationabbr                                                 = O2
 angal.examination.temperature                                                    = Temperatura
