Fixed one label [AR][PT]

--- a/bundle/language_ar.properties
+++ b/bundle/language_ar.properties
@@ -439,7 +439,7 @@ angal.genericreportbill.doyouwanttoprintreceipt                                 
 angal.help.pdfviewernotfound                                                     = متصفح ال PDF غير متوفر، دليل الاستخدام موجود في مجلد المستندات
 angal.help.pdfviewernotfoundoruserguidenotfound                                  = متصفح ال PDF او دليل المستخدم غير متوفر في مجلد الملفات
 angal.help.userguidenotfound                                                     = دليل المستخدم غير موجود في مجلد المستندات
-angal.hospital                                                                   = المستشفى المفتوح
+angal.hospital                                                                   = Open Hospital
 angal.hospital.address                                                           = عنوان
 angal.hospital.city                                                              = المدينة
 angal.hospital.currencycod                                                       = Currency Cod
