--- a/bundle/language_pt.properties
+++ b/bundle/language_pt.properties
@@ -439,7 +439,7 @@ angal.genericreportbill.doyouwanttoprintreceipt                                 
 angal.help.pdfviewernotfound                                                     = Visualizador de PDF não encontrado.\n O guia de utilizador encontra-se no ficheiro de Documentos.
 angal.help.pdfviewernotfoundoruserguidenotfound                                  = Visualizador de PDF não encontrado ou Guia do Utilizador não encontrado no ficheiro Documentos
 angal.help.userguidenotfound                                                     = Guia do utilizador não encontrado no Ficheiro de Documentos
-angal.hospital                                                                   = Abrir Hospital ---- ou Aberto
+angal.hospital                                                                   = Open Hospital
 angal.hospital.address                                                           = Endereço
 angal.hospital.city                                                              = Cidade
 angal.hospital.currencycod                                                       = Currency Cod
