OP-171 #comment added InputVerifier for all textfields

--- a/bundle/language_ar.properties
+++ b/bundle/language_ar.properties
@@ -288,6 +288,8 @@ angal.common.quantity                                                           
 angal.common.save                                                                = حفظ
 angal.common.savem                                                               = حفظ
 angal.common.thiscouldretrievealargeamountofdataproceed                          = هذا يمكن استرداد كمية كبيرة من البيانات، والمضي قدما؟
+angal.common.thisvaluecannotbegreaterthan                                        = لا يمكن أن تكون هذه القيمة أكبر من 
+angal.common.thisvaluecannotbelesserthan                                         = لا يمكن أن تكون هذه القيمة أقل من 
 angal.common.to                                                                  = إلى
 angal.common.uom.bpm                                                             = bpm
 angal.common.uom.celsius                                                         = °C
