--- a/bundle/language_de.properties
+++ b/bundle/language_de.properties
@@ -288,6 +288,8 @@ angal.common.quantity                                                           
 angal.common.save                                                                = Speichern
 angal.common.savem                                                               = SPEICHERN
 angal.common.thiscouldretrievealargeamountofdataproceed                          = Dies könnte abzurufen eine große Menge von Daten, vorgehen?
+angal.common.thisvaluecannotbegreaterthan                                        = Dieser wert kann nicht größer als sein 
+angal.common.thisvaluecannotbelesserthan                                         = Dieser wert darf nicht kleiner sein als 
 angal.common.to                                                                  = To
 angal.common.uom.bpm                                                             = bpm
 angal.common.uom.celsius                                                         = °C
