--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -288,6 +288,8 @@ angal.common.quantity                                                           
 angal.common.save                                                                = Save
 angal.common.savem                                                               = SAVE
 angal.common.thiscouldretrievealargeamountofdataproceed                          = This could retrieve a large amount of data, proceed?
+angal.common.thisvaluecannotbegreaterthan                                        = This value cannot be greater than 
+angal.common.thisvaluecannotbelesserthan                                         = This value cannot be lesser than 
 angal.common.to                                                                  = To
 angal.common.uom.bpm                                                             = bpm
 angal.common.uom.celsius                                                         = C
