--- a/bundle/language_es.properties
+++ b/bundle/language_es.properties
@@ -288,6 +288,8 @@ angal.common.quantity                                                           
 angal.common.save                                                                = Guarda
 angal.common.savem                                                               = GUARDA
 angal.common.thiscouldretrievealargeamountofdataproceed                          = Esto podría recuperar una gran cantidad de datos, proceder?
+angal.common.thisvaluecannotbegreaterthan                                        = Este valor no puede ser mayor que 
+angal.common.thisvaluecannotbelesserthan                                         = Este valor no puede ser menor que 
 angal.common.to                                                                  = A
 angal.common.uom.bpm                                                             = bpm
 angal.common.uom.celsius                                                         = °C
