--- a/bundle/language_fr.properties
+++ b/bundle/language_fr.properties
@@ -288,6 +288,8 @@ angal.common.quantity                                                           
 angal.common.save                                                                = Sauve
 angal.common.savem                                                               = SAUVE
 angal.common.thiscouldretrievealargeamountofdataproceed                          = Cela pourrait récupérer une grande quantité de données, procéder?
+angal.common.thisvaluecannotbegreaterthan                                        = Cette valeur ne peut pas être supérieure à 
+angal.common.thisvaluecannotbelesserthan                                         = Cette valeur ne peut pas être inférieure à 
 angal.common.to                                                                  = á
 angal.common.uom.bpm                                                             = bpm
 angal.common.uom.celsius                                                         = °C
