--- a/bundle/language_it.properties
+++ b/bundle/language_it.properties
@@ -288,6 +288,8 @@ angal.common.quantity                                                           
 angal.common.save                                                                = Salva
 angal.common.savem                                                               = SALVA
 angal.common.thiscouldretrievealargeamountofdataproceed                          = Questo potrebbe recuperare una grande quantità di dati, procedere?
+angal.common.thisvaluecannotbegreaterthan                                        = Questo valore non può essere superiore a 
+angal.common.thisvaluecannotbelesserthan                                         = Questo valore non può essere inferiore a 
 angal.common.to                                                                  = A
 angal.common.uom.bpm                                                             = bpm
 angal.common.uom.celsius                                                         = °C
