--- a/bundle/language_pt.properties
+++ b/bundle/language_pt.properties
@@ -288,6 +288,8 @@ angal.common.quantity                                                           
 angal.common.save                                                                = Salvar
 angal.common.savem                                                               = SALVAR
 angal.common.thiscouldretrievealargeamountofdataproceed                          = esta ação poderá significar a recolha de uma grande quantidade de informação, continuar?
+angal.common.thisvaluecannotbegreaterthan                                        = Este valor não pode ser maior que 
+angal.common.thisvaluecannotbelesserthan                                         = Este valor não pode ser menor que 
 angal.common.to                                                                  = Para
 angal.common.uom.bpm                                                             = bpm
 angal.common.uom.celsius                                                         = °C
