--- a/bundle/language_sw.properties
+++ b/bundle/language_sw.properties
@@ -288,6 +288,8 @@ angal.common.quantity                                                           
 angal.common.save                                                                = Hifadhi
 angal.common.savem                                                               = HIFADHI
 angal.common.thiscouldretrievealargeamountofdataproceed                          = Hii inaweza retrieve kiasi kikubwa cha data, kuendelea?
+angal.common.thisvaluecannotbegreaterthan                                        = Thamani hii haiwezi kuwa kubwa kuliko 
+angal.common.thisvaluecannotbelesserthan                                         = Thamani hii haiwezi kuwa ndogo kuliko 
 angal.common.to                                                                  = kwa
 angal.common.uom.bpm                                                             = bpm
 angal.common.uom.celsius                                                         = °C
